[package]
name = "embedded-ccs811"
version = "1.0.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/embedded-ccs811-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the CCS811 ultra-low power digital gas sensor for monitoring indoor air quality."
readme = "README.md"
keywords = ["gas", "air", "quality", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/embedded-ccs811-rs"
documentation = "https://docs.rs/embedded-ccs811"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = "1.0.0"
nb = "1"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
linux-embedded-hal = { version = "0.4", features = ["gpio_cdev"] }

[profile.release]
lto = true
